# shoe-splatter

./: .dockerignore  .gitattributes  .gitmodules  Dockerfile  README.md  docker-compose.yml  pyproject.toml
checkpoints/: MODEL_INSTALL.md
configs/: process_images.yml  process_video.yml  train.yml
shoe_splatter/scripts/: detect_masks.py  mask_pc.py  sfm.py  shoe_splatter_train.py  utils.py
